agregando vista privada

--- a/login/templates/signup.html
+++ b/login/templates/signup.html
@@ -1,9 +1,10 @@
 
-
+{{error}}
+ 
 <form method="POST">
     {% csrf_token %} 
     {{form.as_p}}
     <button>
-        signup
+        SIGN-UP
     </button>
 </form>
