--- a/login/templates/home.html
+++ b/login/templates/home.html
@@ -1,1 +1,14 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <h1>Home</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, veniam qui enim odio magnam ad. 
+    Nobis sapiente quod soluta sit labore cupiditate magnam optio maxime ab, eos modi odit impedit voluptates 
+    velit quo quia possimus nam illum minus aliquam vel aperiam! Culpa nihil reprehenderit dignissimos? 
+    Quidem repellendus reprehenderit inventore explicabo adipisci delectus quisquam nostrum ipsa nulla ut 
+    aperiam quam et, in fugiat laboriosam perspiciatis laudantium optio consectetur placeat error iure! 
+    Ipsa ad dolorem, ipsam commodi delectus excepturi. Corporis, harum temporibus. Non ut impedit quisquam 
+    atque aliquam corrupti illum pariatur beatae, perspiciatis temporibus et mollitia sapiente, iusto, 
+    nesciunt similique iure architecto.
+</p>
+{% endblock %}
