--- a/login/templates/signup.html
+++ b/login/templates/signup.html
@@ -1,4 +1,5 @@
-
+{% extends 'base.html' %}
+{% block content %}
 {{error}}
  
 <form method="POST">
@@ -8,3 +9,4 @@
         SIGN-UP
     </button>
 </form>
+{% endblock %}
