--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -4,26 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Requeriment Django</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
+
+    
+
 
     <nav>
         <ul>
             <li>
                 <a href="/">Home</a>
             </li>
-            
             {% if user.is_authenticated %}
-            <li>
-                <a href="/logout">LogOut</a>
-            </li>
+                <li>
+                    <a href="/signout">LogOut</a>
+                </li>
             {% else %} 
-            <li>
-                <a href="/signup">SignUp</a>
-            </li> 
-            <li>
-                <a href="/signin">SignIn</a>
-            </li>  
+                <li>
+                    <a href="/signup">SignUp</a>
+                </li> 
+                <li>
+                    <a href="/signin">SignIn</a>
+                </li>  
             {% endif %} 
         </ul>
     </nav>
