estilos para la pagina

--- a/login/templates/home.html
+++ b/login/templates/home.html
@@ -1,14 +1,19 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<h1>Home</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, veniam qui enim odio magnam ad. 
-    Nobis sapiente quod soluta sit labore cupiditate magnam optio maxime ab, eos modi odit impedit voluptates 
-    velit quo quia possimus nam illum minus aliquam vel aperiam! Culpa nihil reprehenderit dignissimos? 
-    Quidem repellendus reprehenderit inventore explicabo adipisci delectus quisquam nostrum ipsa nulla ut 
-    aperiam quam et, in fugiat laboriosam perspiciatis laudantium optio consectetur placeat error iure! 
-    Ipsa ad dolorem, ipsam commodi delectus excepturi. Corporis, harum temporibus. Non ut impedit quisquam 
-    atque aliquam corrupti illum pariatur beatae, perspiciatis temporibus et mollitia sapiente, iusto, 
-    nesciunt similique iure architecto.
-</p>
+<main class="container py-5" style="background-color: #007bff;">  <!-- Color azul fuera del section -->
+    <section class="card card-body">
+        <h1 class="display-1 text-center">SISTEMAS DE EGRESADOS</h1>
+        <p>Un Sistema de Egresados para el ISER es una plataforma digital diseñada para conectar a exalumnos 
+             con la institución y entre sí, fomentando una red de apoyo profesional y académico. Este sistema 
+             permite a los egresados actualizar sus datos, acceder a oportunidades laborales exclusivas, 
+             recibir información sobre eventos y capacitaciones, y mantener un vínculo activo con el instituto.
+             Además, facilita la retroalimentación continua para mejorar los programas académicos y aumentar 
+             la empleabilidad de sus egresados. Es una herramienta clave para fortalecer la comunidad ISER,
+             impulsando el crecimiento profesional de sus antiguos estudiantes y promoviendo el prestigio 
+             institucional.
+        </p>
+        <!-- Agregamos una imagen dentro del section -->
+        <img src="https://www.iser.edu.co/wp-content/uploads/2024/07/cropped-LOGO-NEGRO-HORIZONTAL-01-2-1536x614.png" alt="Descripción de la imagen" class="img-fluid mt-4" style="max-width: 100%; height: auto;">
+    </section>
+</main>
 {% endblock %}
