--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -8,29 +8,34 @@
 </head>
 <body>
 
-    
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <div class="container">
+          <a class="navbar-brand" href="#">SYSTEM-EGRESED</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+              </li>
+              {% if user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="/signout">LogOut</a>
+              </li>
+              {% else %} 
+              <li class="nav-item">
+                <a class="nav-link" href="/signup">SignUp</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/signin">SignIn</a>
+              </li>
+              {% endif %} 
+            </ul>
+          </div>
+        </div>
 
-
-    <nav>
-        <ul>
-            <li>
-                <a href="/">Home</a>
-            </li>
-            {% if user.is_authenticated %}
-                <li>
-                    <a href="/signout">LogOut</a>
-                </li>
-            {% else %} 
-                <li>
-                    <a href="/signup">SignUp</a>
-                </li> 
-                <li>
-                    <a href="/signin">SignIn</a>
-                </li>  
-            {% endif %} 
-        </ul>
-    </nav>
-
+      </nav>
     {% block content %}
 
     {% endblock %}
