Estilos al sitio web

--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -25,7 +25,7 @@
               </li>
               {% else %} 
               <li class="nav-item">
-                <a class="nav-link" href="/signup">SignUp</a>
+                <a class="nav-link" href="/signup">Register</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/signin">SignIn</a>
