--- a/login/templates/private.html
+++ b/login/templates/private.html
@@ -1,1 +1,3 @@
-<h1 background-color: red>Esta es la vista privada</h1>
+<main style="background-color: red">
+    <h1>Esta es la vista privada</h1>
+</main>
