--- a/login/templates/signup.html
+++ b/login/templates/signup.html
@@ -1,12 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
-{{error}}
+<main class="container py-5">
+    <section class="card card-body">
+        {{error}}
  
-<form method="POST">
-    {% csrf_token %} 
-    {{form.as_p}}
-    <button>
-        SIGN-UP
-    </button>
-</form>
-{% endblock %}
+        <form method="POST">
+            {% csrf_token %} 
+            {{form.as_p}}
+            <button class="btn btn-primary">
+                SIGN-UP
+            </button>
+        </form>
+            {% endblock %}
+
+    </section>
+</main>
