--- a/login/templates/private.html
+++ b/login/templates/private.html
@@ -1,3 +1,11 @@
-<main style="background-color: red">
-    <h1>Esta es la vista privada</h1>
-</main>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body style="background-color: red;">
+    
+</body>
+</html>
