--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -8,27 +8,27 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg" style="background-color: #1B9E88;">
         <div class="container">
-          <a class="navbar-brand" href="#">SYSTEM-EGRESED</a>
+          <a class="navbar-brand" href="#" style="color: white; font: 20px verdana, sans-serif;">SYSTEMA-EGRESADO</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="/">Home</a>
+                <a class="nav-link" href="/" style="color: white; font: 20px verdana, sans-serif;">Home</a>
               </li>
               {% if user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link" href="/signout">LogOut</a>
+                <a class="nav-link" href="/signout" style="color: white; font: 20px verdana, sans-serif;">LogOut</a>
               </li>
               {% else %} 
               <li class="nav-item">
-                <a class="nav-link" href="/signup">Register</a>
+                <a class="nav-link" href="/signup" style="color: white; font: 20px verdana, sans-serif;">Register</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/signin">SignIn</a>
+                <a class="nav-link" href="/signin" style="color: white; font: 20px verdana, sans-serif;">SignIn</a>
               </li>
               {% endif %} 
             </ul>
