--- a/login/templates/home.html
+++ b/login/templates/home.html
@@ -3,6 +3,7 @@
 {% block content %}
 <main class="container py-5">  <!-- Fondo rojo -->
     <section class="card card-body">
+        
         <h1 class="display-1 text-center" style="color: #1B9D87; font: 28px verdana, sans-serif;">SISTEMAS DE EGRESADOS</h1>
        <div class="container-text">
             <p style="color: black; font: 17px verdana, sans-serif">Un Sistema de Egresados para el ISER es una plataforma digital diseñada para conectar a exalumnos 
@@ -35,6 +36,14 @@
     <div style="position: absolute; bottom: 20px; right: 20px; width: 100px; height: 100px; background-color: rgba(255, 255, 255, 0.2); border-radius: 20px; display: flex; justify-content: center; align-items: center;">
         <span style="font-size: 30px; color: white;">ABC</span>
     </div>
+
+    <footer class="bg-dark text-white text-center py-4 mt-5">
+        <p class="mb-0">© 2024 ISER. Todos los derechos reservados.</p>
+        <p>Contacto: iserpam@iser.edu.co | Tel: +57 320 655 6171</p>
+        <div class="social-icons">
+            <!-- Aquí puedes agregar iconos de redes sociales si lo deseas -->
+        </div>
+    </footer>
 </main>
 {% endblock %}
 
