--- a/login/templates/signup.html
+++ b/login/templates/signup.html
@@ -8,7 +8,7 @@
             {% csrf_token %} 
             {{form.as_p}}
             <button class="btn btn-primary">
-                SIGN-UP
+                Registrarse
             </button>
         </form>
             {% endblock %}
