importaci9on de json y modelamiento de la tabla

--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -23,6 +23,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/signout" style="color: white; font: 20px verdana, sans-serif;">Cerrar Sesion</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/cargar" style="color: white; font: 20px verdana, sans-serif;">Cargar Archivo</a>
+              </li>
               {% else %} 
               <li class="nav-item">
                 <a class="nav-link" href="/signup" style="color: white; font: 20px verdana, sans-serif;">Registrarse</a>
