--- a/login/templates/cargar_archivo.html
+++ b/login/templates/cargar_archivo.html
@@ -3,7 +3,7 @@
 {% block content %}
 <main class="container py-5">
     <section class="card card-body" style="background: transparent; border: none;">
-        <h1 class="display-1 text-center">Sube tu archivo CSV y especifica el número de entradas</h1>
+        <h1 class="display-1 text-center">Sube tu archivo CSV</h1>
         
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
@@ -15,8 +15,35 @@
             <button type="submit" class="btn btn-light my-2" style="width: 150px; height: 50px;">Cargar</button>
         </form>
         
+        <div id="alertContainer" style="display: none;" class="alert alert-danger" role="alert">
+            Por favor, selecciona un archivo CSV antes de cargar.
+        </div>
+
         <script>
             const numCajasInput = document.getElementById('id_num_cajas');
+            const form = document.querySelector('form');
+            const alertContainer = document.getElementById('alertContainer');
+            const fileInput = document.querySelector('input[type="file"]'); // Selecciona el input de archivo
+            
+            form.addEventListener('submit', function(event) {
+                // Asegúrate de que el número de cajas se envíe
+                const numCajas = numCajasInput.value;
+                const hiddenInput = document.createElement('input');
+                hiddenInput.type = 'hidden';
+                hiddenInput.name = 'id_num_cajas';
+                hiddenInput.value = numCajas;
+                form.appendChild(hiddenInput);
+
+                // Validar si hay un archivo cargado
+                if (!fileInput.files.length) {
+                    event.preventDefault(); // Evita que el formulario se envíe
+                    alertContainer.style.display = 'block'; // Muestra el aviso
+                } else {
+                    alertContainer.style.display = 'none'; // Oculta el aviso si hay un archivo
+                }
+            });
+            
+            // Código para agregar cajas dinámicamente
             numCajasInput.addEventListener('input', function() {
                 const numCajas = numCajasInput.value;
                 const cajasContainer = document.getElementById('cajasContainer');
