--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -5,47 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Requeriment Django</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <style>
+        .dropdown-menu-right {
+            right: 0;
+            left: auto;
+        }
+        .dropdown-item-horizontal {
+            display: inline-block;
+        }
+        .navbar-nav .nav-item {
+            margin-left: auto;
+        }
+        .navbar-toggler {
+            display: none;
+        }
+        .navbar-collapse {
+            display: flex !important;
+        }
+    </style>
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg" style="background-color: #1B9E88;">
         <div class="container">
-          <a class="navbar-brand" href="#" style="color: white; font: 20px verdana, sans-serif;">SISTEMA-EGRESADO</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <a class="navbar-brand" href="#" style="color: white; font: 20px verdana, sans-serif;">SISTEMA-EGRESADO</a>
+          <div class="navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white; font: 20px verdana, sans-serif;">
+                        <span class="navbar-toggler-icon"></span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                        {% if user.is_authenticated %}
+                            <li><a class="dropdown-item" href="{% url 'buscar' %}" style="color: black; font: 20px verdana, sans-serif;"><img src="https://img.icons8.com/ios-filled/24/000000/search.png" alt="Buscar"> Buscar</a></li>
+                            <li><a class="dropdown-item" href="{% url 'cargar_archivo' %}" style="color: black; font: 20px verdana, sans-serif;"><img src="https://img.icons8.com/ios-filled/24/000000/upload.png" alt="Cargar Archivo"> Cargar</a></li>
+                        {% endif %}
+                    </ul>
+                </li>
+            </ul>
             <ul class="navbar-nav ms-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'home' %}" style="color: white; font: 20px verdana, sans-serif;">Principal</a>
-                  </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                      <a class="nav-link" href="{% url 'buscar'  %}" style="color: white; font: 20px verdana, sans-serif;">Buscar</a>
-                    </li>
-
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url 'cargar_archivo'  %}" style="color: white; font: 20px verdana, sans-serif;">Cargar Archivo</a>
+                        <a class="nav-link" href="{% url 'home' %}" style="color: white; font: 20px verdana, sans-serif;">Principal</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{% url 'logout' %}" style="color: white; font: 20px verdana, sans-serif;">Cerrar Sesion</a>
+                        <a class="nav-link" href="{% url 'logout' %}" style="color: white; font: 20px verdana, sans-serif;">Cerrar Sesión</a>
                     </li>
-                {% else %}
+                  {% else %}
                     <li class="nav-item">
                       <a class="nav-link" href="{% url 'signup' %}" style="color: white; font: 20px verdana, sans-serif;">Registrarse</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{% url 'signin' %}" style="color: white; font: 20px verdana, sans-serif;">Iniciar Sesion</a>
+                      <a class="nav-link" href="{% url 'signin' %}" style="color: white; font: 20px verdana, sans-serif;">iniciar Sesión</a>
                     </li>
-                {% endif %} 
+                {% endif %}
             </ul>
           </div>
         </div>
-
       </nav>
-    {% block content %}
 
+    {% block content %}
     {% endblock %}
     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
