--- a/login/templates/vistasPublicas/signin.html
+++ b/login/templates/vistasPublicas/signin.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<main class="d-flex justify-content-center align-items-center vh-100 bg-dark">
+<main class="d-flex justify-content-center align-items-center vh-100 bg-aquamarine">
     <section class="card card-body shadow-lg rounded-3 login-card d-flex justify-content-center align-items-center ">
         <div class="text-center">
             <!-- Imagen de ícono (opcional) -->
@@ -19,14 +19,14 @@
         <form method="POST">
             {% csrf_token %}
             <div class="form-group mb-3">
-                <label for="id_username" class="form-label text-black" placeholder="username">Usuario</label>
+                <label for="id_username" class="form-label text-black" placeholder="Ingresa su usuario">Usuario:</label>
                 {{ form.username }}
             </div>
             <div class="form-group mb-3">
-                <label for="id_password" class="form-label text-black">contraseña</label>
+                <label for="id_password" class="form-label text-black">Contraseña:</label>
                 {{ form.password }}
             </div>
-            <button class="btn btn-primary justify-content-center align-items-center btn-lg">
+            <button class="btn btn-primary justify-content-center align-items-center align-text-center btn-lg">
                 Acceder
             </button>
         </form>
